--- a/src/en/sflix/build.gradle
+++ b/src/en/sflix/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'SFlix'
     extClass = '.SFlix'
     themePkg = 'dopeflix'
-    baseUrl = 'https://sflix.to'
+    baseUrl = 'https://sflix.to/'
     overrideVersionCode = 8
 }
 
